# CACM_Shielding_Demonstrations

./: README.md  docker_build.sh  docker_run_experiment.sh  docker_run_jupyter.sh  dockerfile
Minigrid2PRISM/: CMakeLists.txt  exampleConfig.yaml  main.cpp
Minigrid2PRISM/examples/: example_guards.prism  example_guards.txt  example_guards.yaml  example_module.txt  example_module.yaml  example_probabilities.txt  example_probabilities.yaml
Minigrid2PRISM/util/: CMakeLists.txt  ConfigYaml.cpp  ConfigYaml.h  Grid.cpp  Grid.h  MinigridGrammar.h  OptionParser.cpp  OptionParser.h  PrismFormulaPrinter.cpp  PrismFormulaPrinter.h  PrismModulesPrinter.cpp  PrismModulesPrinter.h  PrismPrinter.cpp  PrismPrinter.h  cell.cpp  cell.h
notebooks/: DeterministicShielding.ipynb  DeterministicShielding.py  DeterministicUnshielded.py  ProbabilisticShielding.ipynb  ProbabilisticShielding_0.0.py  ProbabilisticShielding_0.03.py  ProbabilisticShielding_0.05.py  ProbabilisticUnshielded.py  sb3utils.py  utils.py
notebooks/.ipynb_checkpoints/: FaultyActions-checkpoint.ipynb  GSW_Playground-checkpoint.ipynb  HelloLavaGap-checkpoint.ipynb  Playground-checkpoint.ipynb  ProbabilisticShielding-checkpoint.ipynb  SlipperyCliff-checkpoint.ipynb  sb3utils-checkpoint.py  utils-checkpoint.py
notebooks/shielding_files_20241129T122425_0tlvpkoj/: grid.txt
notebooks/shielding_files_20241129T122427_qaabh7px/: grid.txt  shield
notebooks/shielding_files_20241129T122429_qyepifjg/: grid.prism  grid.txt
tempest-devel/: CMakeLists.txt
tempest-py/: CMakeLists.txt  setup.py
tempest-py/src/: mod_shields.cpp
(+129 files in other folders)
